k8s测试代码